--- a/agence-immo/styles/main-styles.scss
+++ b/agence-immo/styles/main-styles.scss
@@ -6,7 +6,7 @@
     30% {
         margin-left: -306px;
     }
-
+ 
     50% {
         margin-left: -306px;
     }
@@ -458,6 +458,99 @@ body {
 
 @media screen and (min-width: 1px) and (max-width: 600px) {
 
+    @keyframes slide {
+        20% {
+            margin-left: 0px;
+        }
+    
+        30% {
+            margin-left: -100vw;//
+        }
+     
+        50% {
+            margin-left: -100vw;//
+        }
+    
+        60% {
+            margin-left: -200vw;//
+        }
+    
+        70% {
+            margin-left: -200vw;//
+        }
+    
+        80% {
+            margin-left: -300vw;//
+        }
+    
+        90% {
+            margin-left: -300vw;//
+        }
+    }
+    
+    @keyframes slideFour {
+        20% {
+            margin-left: 0px;
+        }
+    
+        30% {
+            margin-left: -100vw;//
+        }
+    
+        50% {
+            margin-left: -100vw;//
+        }
+    
+        60% {
+            margin-left: -200vw;//
+        }
+    
+        70% {
+            margin-left: -200vw;//
+        }
+    
+        80% {
+            margin-left: -300vw;//
+        }
+    
+        90% {
+            margin-left: -300vw;//
+        }
+    }
+    
+    @keyframes slideIntro {
+        20% {
+            margin-top: 0px;
+        }
+    
+        30% {
+            margin-top: -245px;
+        }
+    
+        50% {
+            margin-top: -250px;//+5//
+        }
+    
+        60% {
+            margin-top: -495px;//+5//
+        }
+    
+        70% {
+            margin-top: -495px;//+5//
+        }
+    
+        80% {
+            margin-top: -740px;//+5//
+        }
+    
+        90% {
+            margin-top: -745px;//+10//
+        }
+    }
+
+
+
+
     html,
     body {
         max-width: 100vw;
@@ -530,8 +623,8 @@ body {
 
             .open-doors-intro-wrapper {
 
-                height: 1400px;
-                width: 100%;
+                height: 980px;//
+                width: 100vw;//
                 animation: slideIntro 10s ease infinite;
                 z-index: 1;
 
@@ -542,6 +635,7 @@ body {
 
                     width: 100%;
                     height: 245px;
+                    margin: 0;//
 
                 }
 
@@ -795,14 +889,14 @@ body {
             }
 
             .fourth-first {
-                width: 2528px;
+                width: 400vw;
                 height: 100%;
                 animation: slideFour 10s ease infinite;
 
 
                 img {
                     float: left;
-                    width: 632px;
+                    width: 100vw;//
                     height: 100%;
                 }
             }
