--- a/picture only css/styles/index.scss
+++ b/picture only css/styles/index.scss
@@ -12,7 +12,14 @@
     100% { background-color: rgb(0, 255, 0); }
     
   }
-
+  @keyframes color-change-sun {
+    0% { background-color: rgb(255, 217, 0); }
+    25% { background-color: rgb(233, 199, 5); }
+    50% { background-color: rgb(235, 200, 3); }
+    75% { background-color: rgb(216, 184, 2); }
+    100% { background-color: rgb(255, 217, 0); }
+    
+  }
 
 
 
@@ -42,15 +49,112 @@ html {
     
   }
 
-  .city-back{
+  .sky{
     background-color: rgb(169,221,243);
          width: 100vw;
          height: 52vh;
+    .city-back{
+        background-color: turquoise;
+        width: 90%;
+        height: 90%;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    .sun-block{
+        background-color: transparent;
+        height: 16%;
+        width: 11%;
+        position: fixed;
+        right: 5vw;
+        top: 0;
+        .sun{
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            // background-color: rgb(255, 217, 0);
+            animation: color-change-sun 5s infinite ;
+        }
+    }
+
+
+
+
+
   }
   .trottoir{
     background-color: rgb(184, 193, 199);
          width: 100vw;
          height: 5vh;
+         display: flex;
+         justify-content: space-between;
+
+        .trees-block{
+            width: 4vw;
+            height: 12vh;
+            background-color: transparent;
+            position: relative;
+            margin-top: -12vh;
+            display: flex;
+            flex-direction: column;
+
+            .tree-top{
+                background-color: rgb(158,185,42);
+                width: 100%;
+                height: 150%;
+                z-index: 1;
+                border-radius: 48% 52% 51% 49% / 79% 78% 22% 21% ; 
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-end;
+                .trunck{
+                    background-color: rgb(85,76,7);
+                    width: 7%;
+                    height: 30%;
+                    margin: 0 auto;
+                    
+                }
+            }
+            .tree-down{
+                background-color: rgb(85,76,7);
+                width: 7%;
+                height: 50%;
+                margin: 0 auto;
+                z-index: 2;
+            }
+
+
+        }
+
+
+
+
+
+
+
+        .trees-block:nth-child(1){
+            margin-left: 2vw;
+
+        }
+        .trees-block:nth-child(4){
+            margin-right: 2vw;
+        }
+
+
 
     .light-block{
         background-color: transparent;
