--- a/picture only css/styles/index.scss
+++ b/picture only css/styles/index.scss
@@ -1,25 +1,63 @@
 @keyframes color-change-first {
-    0% { background-color: rgb(255, 0, 0); }
-    50% { background-color: rgb(255, 0, 0); }
-    55% { background-color: rgb(0, 0, 0); }
-    100% { background-color: rgb(0, 0, 0); }
-    
-  }
-  @keyframes color-change-second {
-    0% { background-color: rgb(0, 0, 0); }
-    50% { background-color: rgb(0, 0, 0); }
-    55% { background-color: rgb(0, 255, 0); }
-    100% { background-color: rgb(0, 255, 0); }
-    
-  }
-  @keyframes color-change-sun {
-    0% { background-color: rgb(255, 217, 0); }
-    25% { background-color: rgb(233, 199, 5); }
-    50% { background-color: rgb(235, 200, 3); }
-    75% { background-color: rgb(216, 184, 2); }
-    100% { background-color: rgb(255, 217, 0); }
-    
-  }
+    0% {
+        background-color: rgb(255, 0, 0);
+    }
+
+    50% {
+        background-color: rgb(255, 0, 0);
+    }
+
+    55% {
+        background-color: rgb(0, 0, 0);
+    }
+
+    100% {
+        background-color: rgb(0, 0, 0);
+    }
+
+}
+
+@keyframes color-change-second {
+    0% {
+        background-color: rgb(0, 0, 0);
+    }
+
+    50% {
+        background-color: rgb(0, 0, 0);
+    }
+
+    55% {
+        background-color: rgb(0, 255, 0);
+    }
+
+    100% {
+        background-color: rgb(0, 255, 0);
+    }
+
+}
+
+@keyframes color-change-sun {
+    0% {
+        background-color: rgb(255, 217, 0);
+    }
+
+    25% {
+        background-color: rgb(233, 199, 5);
+    }
+
+    50% {
+        background-color: rgb(235, 200, 3);
+    }
+
+    75% {
+        background-color: rgb(216, 184, 2);
+    }
+
+    100% {
+        background-color: rgb(255, 217, 0);
+    }
+
+}
 
 
 
@@ -37,26 +75,219 @@ html {
     padding: 0;
     margin: 0;
     font-family: 'Roboto', sans-serif;
-  }
-  
-  body {
+}
+
+body {
     padding: 0;
     margin: 0;
     font-family: 'Roboto', sans-serif;
     width: 100vw;
     height: 100vh;
-    background-color: rgb(169,221,243);
-    
-  }
+    // background-color: rgb(169, 221, 243);
 
-  .sky{
-    background-color: rgb(169,221,243);
-         width: 100vw;
-         height: 52vh;
-    .city-back{
-        background-color: turquoise;
-        width: 90%;
+}
+
+.sky {
+    // background-color: rgb(169, 221, 243);
+    background-color: transparent;
+    width: 100vw;
+    height: 52vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+
+    .city-back {
+        background-color: transparent;
+        width: 70%;
         height: 90%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: row;
+        
+        align-items: flex-end;
+
+        // .building{
+             
+        //     //border: 1px solid black;
+        // }
+
+        .building-1{
+            background-color: rgb(177,204,221);
+            width: 8%;
+            height: 35%;
+        }
+        .building-2{
+            background-color: rgb(207, 227, 243);
+            width: 8%;
+            height: 50%;
+            margin-left: -2%;
+            z-index: 5;
+        }
+
+        .building-3{
+            width: 8%;
+            height: 45%;
+            margin-left: -1%;
+            z-index: 10;
+            background-color: rgb(200, 218, 236);
+        }
+
+        .building-4{
+            background-color: rgb(157,192,211);
+            width: 6%;
+            height: 66%;
+            margin-left: -11%;
+            z-index: 1;
+        }
+
+        .building-5{
+            background-color: rgb(177,204,221);
+            width: 13%;
+            height: 60%;
+            margin-left: 1%;
+        }
+
+        .building-6{
+            background-color: rgb(204, 223, 238);
+            width: 8%;
+            height: 40%;
+            margin-left: -2%;
+            z-index: 10;
+            
+        }
+
+        .building-7{
+            background-color: rgb(206, 225, 240);
+            width: 8%;
+            height: 40%;
+            margin-left: 0.5%;
+            z-index: 10;
+        }
+
+        .building-8{
+            background-color: rgb(157,192,211);
+            width: 6%;
+            height: 70%;
+            margin-left: -15%;
+            z-index: 1;
+        }
+
+        .building-9{
+            background-color:  rgb(176,205,221);
+            width: 11%;
+            height: 55%;
+            margin-left: 4%;
+        }
+
+        .building-10{
+            background-color: rgb(157,192,211);
+            width: 8%;
+            height: 45%;
+            margin-left: 0.1%;
+            z-index: 10;
+        }
+
+        .building-11{
+            background-color: rgb(157,192,211);
+            width: 6%;
+            height: 66%;
+            margin-left: -5%;
+            z-index: 1;
+        }
+
+        .building-12{
+            background-color:  rgb(195, 223, 240);
+            width: 8%;
+            height: 27%;
+            margin-left: -2%;
+            z-index: 10;
+        }
+        .building-13{
+            background-color:  rgb(181, 215, 233);
+            width: 8%;
+            height: 55%;
+            margin-left: -3%;
+            
+        }
+        .building-14{
+            background-color:  rgb(163, 210, 235);
+            width: 8%;
+            height: 40%;
+            margin-left: -3%;
+            
+        }
+        .building-15{
+            background-color:  rgb(168, 198, 214);
+            width: 8%;
+            height: 25%;
+            margin-left: -3%;
+            z-index: 10;
+            
+        }
+        .building-16{
+            background-color:  rgb(196, 224, 240);
+            width: 8%;
+            height: 60%;
+            margin-left: -3%;
+            
+        }
+        .building-17{
+            background-color:  rgb(178, 225, 250);
+            width: 8%;
+            height: 40%;
+            margin-left: -3%;
+            z-index: 10;
+            
+        }
+        .building-18{
+            background-color:  rgb(146, 192, 216);
+            width: 8%;
+            height: 43%;
+            margin-left: -3%;
+            
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     }
 
 
@@ -75,19 +306,88 @@ html {
 
 
 
-    .sun-block{
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    .sun-block {
         background-color: transparent;
         height: 16%;
-        width: 11%;
+        width: 10%;
         position: fixed;
         right: 5vw;
         top: 0;
-        .sun{
+
+        .sun {
             width: 100%;
             height: 100%;
             border-radius: 50%;
             // background-color: rgb(255, 217, 0);
-            animation: color-change-sun 5s infinite ;
+            animation: color-change-sun 5s infinite;
         }
     }
 
@@ -95,68 +395,73 @@ html {
 
 
 
-  }
-  .trottoir{
-    background-color: rgb(184, 193, 199);
-         width: 100vw;
-         height: 5vh;
-         display: flex;
-         justify-content: space-between;
+}
 
-        .trees-block{
-            width: 4vw;
-            height: 12vh;
-            background-color: transparent;
-            position: relative;
-            margin-top: -12vh;
+.trottoir {
+    background-color: rgb(184, 193, 199);
+    width: 100vw;
+    height: 5vh;
+    display: flex;
+    justify-content: space-between;
+
+    .trees-block {
+        z-index: 1000;
+        width: 4vw;
+        height: 12vh;
+        background-color: transparent;
+        position: relative;
+        margin-top: -12vh;
+        display: flex;
+        flex-direction: column;
+
+        .tree-top {
+            background-color: rgb(158, 185, 42);
+            width: 100%;
+            height: 150%;
+            z-index: 1;
+            border-radius: 48% 52% 51% 49% / 79% 78% 22% 21%;
             display: flex;
             flex-direction: column;
+            justify-content: flex-end;
 
-            .tree-top{
-                background-color: rgb(158,185,42);
-                width: 100%;
-                height: 150%;
-                z-index: 1;
-                border-radius: 48% 52% 51% 49% / 79% 78% 22% 21% ; 
-                display: flex;
-                flex-direction: column;
-                justify-content: flex-end;
-                .trunck{
-                    background-color: rgb(85,76,7);
-                    width: 7%;
-                    height: 30%;
-                    margin: 0 auto;
-                    
-                }
-            }
-            .tree-down{
-                background-color: rgb(85,76,7);
+            .trunck {
+                background-color: rgb(85, 76, 7);
                 width: 7%;
-                height: 50%;
+                height: 30%;
                 margin: 0 auto;
-                z-index: 2;
+
             }
+        }
 
-
+        .tree-down {
+            background-color: rgb(85, 76, 7);
+            width: 7%;
+            height: 50%;
+            margin: 0 auto;
+            z-index: 2;
         }
 
 
+    }
 
 
 
 
 
-        .trees-block:nth-child(1){
-            margin-left: 2vw;
-
-        }
-        .trees-block:nth-child(4){
-            margin-right: 2vw;
-        }
 
 
+    .trees-block:nth-child(1) {
+        margin-left: 2vw;
 
-    .light-block{
+    }
+
+    .trees-block:nth-child(4) {
+        margin-right: 2vw;
+    }
+
+
+
+    .light-block {
         background-color: transparent;
         margin-left: 25%;
         height: 25vh;
@@ -165,8 +470,10 @@ html {
         margin-top: -20vh;
         display: flex;
         flex-direction: column;
+        z-index: 1000;
+        
 
-        .light-part-one{
+        .light-part-one {
             width: 60%;
             height: 45%;
             background-color: rgb(78, 78, 78);
@@ -176,37 +483,40 @@ html {
             flex-direction: column;
             justify-content: space-evenly;
 
-            .red-light{
+            .red-light {
                 height: 35%;
                 width: 50%;
                 border-radius: 50%;
                 border: 1px solid black;
                 // background-color: rgb(255, 0, 0);
                 margin: 0 auto;
-                animation: color-change-first  8s  infinite;
+                animation: color-change-first 8s infinite;
             }
-            .green-light{
+
+            .green-light {
                 height: 35%;
                 width: 50%;
                 border-radius: 50%;
                 border: 1px solid black;
-                
+
                 // background-color: rgb(0, 255, 0);
                 margin: 0 auto;
-                animation: color-change-second 8s infinite ;
+                animation: color-change-second 8s infinite;
             }
 
 
 
 
         }
-        .light-part-two{
+
+        .light-part-two {
             width: 10%;
             height: 50%;
             background-color: rgb(78, 78, 78);
             margin: 0 auto;
         }
-        .light-part-three{
+
+        .light-part-three {
             width: 40%;
             height: 5%;
             background-color: rgb(78, 78, 78);
@@ -221,101 +531,110 @@ html {
 
     }
 
-  }
-  .border{
-    background-color: rgb(193,38,46);
-        width: 100vw;
-         height: 3vh;
-         display: flex;
-         flex-direction: row;
-         justify-content: space-between;
+}
 
-    .border-parts{
+.border {
+    background-color: rgb(193, 38, 46);
+    width: 100vw;
+    height: 3vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .border-parts {
         background-color: rgb(255, 255, 255);
         height: 100%;
         width: 4%;
     }
-  }
-  .road{
-    background-color: rgb(119,117,120);
-        width: 100vw;
-         height: 40vh;
+}
+
+.road {
+    background-color: rgb(119, 117, 120);
+    width: 100vw;
+    height: 40vh;
 
 
-        .road-line{
-            background-color: transparent;
+    .road-line {
+        background-color: transparent;
+        width: 100%;
+        height: 3%;
+        z-index: 1;
+        position: relative;
+        top: 37%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+
+        .road-lines {
+            background-color: gold;
+            width: 9%;
+            height: 100%;
+        }
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+    .crosswalk {
+        z-index: 2;
+        //  background-color: yellow;
+        height: 95%;
+        width: 40%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+
+        .lignes {
+            z-index: 2;
             width: 100%;
-            height: 3%;
-            z-index: 1;
-            position: relative;
-            top: 37%;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-evenly;
-
-            .road-lines{
-                background-color: gold;
-                width: 9%;
-                height: 100%;
-            }
+            height: 10%;
+            background-color: white;
+            transform: skew(60deg);
         }
 
+        .lignes:nth-child(1) {
+            width: 64%;
 
+        }
 
+        .lignes:nth-child(2) {
+            width: 70%;
+        }
 
+        .lignes:nth-child(3) {
+            width: 76%;
 
+        }
 
+        .lignes:nth-child(4) {
+            width: 82%;
+        }
 
+        .lignes:nth-child(5) {
+            width: 88%;
+        }
 
+        .lignes:nth-child(6) {
+            width: 94%;
+        }
 
+        .lignes:nth-child(7) {
+            width: 100%;
+        }
 
-
-
-
-         .crosswalk{
-            z-index: 2;
-            //  background-color: yellow;
-             height: 95%;
-             width: 40%;
-             margin: 0 auto;
-             display: flex;
-             flex-direction: column;
-             justify-content: space-between;
-             
-
-            .lignes{
-                z-index: 2;
-                width: 100%;
-                height: 10%;
-                background-color: white;
-                transform: skew(60deg);
-            }
-            .lignes:nth-child(1){
-                width: 64%;
-                
-            }
-            .lignes:nth-child(2){
-                width: 70%;
-            }
-            .lignes:nth-child(3){
-                width: 76%;
-                
-            }
-            .lignes:nth-child(4){
-                width: 82%;
-            }
-            .lignes:nth-child(5){
-                width: 88%;
-            }
-            .lignes:nth-child(6){
-                width: 94%;
-            }
-            .lignes:nth-child(7){
-                width: 100%;
-            }
-
-         }
-  }
+    }
+}
 
 
 
@@ -329,6 +648,6 @@ html {
 //     height: 25vh;
 //     position: fixed;
 //     bottom: 0;
-    
+
 
 // }
