--- a/picture only css/styles/index.css
+++ b/picture only css/styles/index.css
@@ -107,6 +107,7 @@ body {
   font-family: 'Roboto', sans-serif;
   width: 100vw;
   height: 100vh;
+  background-color: #ceedfc;
 }
 
 .sky {
@@ -148,12 +149,52 @@ body {
   height: 35%;
 }
 
+.sky .city-back .building-1 .first-part {
+  background-color: #b1ccdd;
+  width: 80%;
+  height: 10%;
+  margin-top: -10%;
+  margin-left: 10%;
+}
+
+.sky .city-back .building-1 .second-part {
+  background-color: #b1ccdd;
+  width: 70%;
+  height: 30%;
+  margin-top: -40%;
+  margin-left: 15%;
+  border-radius: 50% 50% 50% 50% / 100% 100% 0% 0%;
+}
+
+.sky .city-back .building-1 .windows {
+  width: 50%;
+  height: 10%;
+  background-color: #d4dee4;
+  margin: 5% auto;
+}
+
 .sky .city-back .building-2 {
   background-color: #cfe3f3;
   width: 8%;
   height: 50%;
   margin-left: -2%;
   z-index: 5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.sky .city-back .building-2 .windows {
+  width: 80%;
+  height: 10%;
+  background-color: #b5d3ec;
+  margin: 0 auto;
 }
 
 .sky .city-back .building-3 {
@@ -162,14 +203,34 @@ body {
   margin-left: -1%;
   z-index: 10;
   background-color: #c8daec;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sky .city-back .building-3 .windows {
+  height: 5%;
+  width: 80%;
+  margin: 0 auto;
+  background-color: #91bde9;
 }
 
 .sky .city-back .building-4 {
   background-color: #9dc0d3;
-  width: 6%;
+  width: 8%;
   height: 66%;
   margin-left: -11%;
   z-index: 1;
+  border-radius: 0% 100% 0% 0% / 100% 100% 0% 0%;
 }
 
 .sky .city-back .building-5 {
@@ -177,6 +238,87 @@ body {
   width: 13%;
   height: 60%;
   margin-left: 1%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sky .city-back .building-5 .block-1 {
+  width: 90%;
+  height: 20%;
+  background-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.sky .city-back .building-5 .block-1 .windows {
+  height: 100%;
+  width: 20%;
+  background-color: #7aa6c2;
+}
+
+.sky .city-back .building-5 .block-2 {
+  width: 90%;
+  height: 20%;
+  background-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.sky .city-back .building-5 .block-2 .windows {
+  width: 47%;
+  height: 40%;
+  background-color: #7aa6c2;
+}
+
+.sky .city-back .building-5 .block-3 {
+  width: 90%;
+  height: 40%;
+  background-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.sky .city-back .building-5 .block-3 .windows {
+  height: 20%;
+  width: 30%;
+  background-color: #7aa6c2;
 }
 
 .sky .city-back .building-6 {
@@ -185,6 +327,28 @@ body {
   height: 40%;
   margin-left: -2%;
   z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.sky .city-back .building-6 .windows {
+  background-color: #b0d7f1;
+  width: 40%;
+  height: 15%;
+  border-radius: 50% 50% 100% 0% / 100% 100% 0% 0%;
 }
 
 .sky .city-back .building-7 {
@@ -193,14 +357,38 @@ body {
   height: 40%;
   margin-left: 0.5%;
   z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.sky .city-back .building-7 .windows {
+  height: 10%;
+  width: 90%;
+  background-color: #9ebcd3;
+  margin: 0 auto;
+}
+
+.sky .city-back .building-7 .verticale-line {
+  background-color: black;
+  position: absolute;
+  height: 100%;
+  width: 15%;
 }
 
 .sky .city-back .building-8 {
   background-color: #9dc0d3;
-  width: 6%;
+  width: 8%;
   height: 70%;
   margin-left: -15%;
   z-index: 1;
+  border-radius: 100% 0% 55% 45% / 100% 100% 0% 0%;
 }
 
 .sky .city-back .building-9 {
@@ -208,14 +396,131 @@ body {
   width: 11%;
   height: 55%;
   margin-left: 4%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sky .city-back .building-9 .first-part {
+  background-color: #b1ccdd;
+  width: 80%;
+  height: 10%;
+  margin-top: -10%;
+}
+
+.sky .city-back .building-9 .second-part {
+  background-color: #b1ccdd;
+  width: 70%;
+  height: 30%;
+  margin-top: -50%;
+  border-radius: 50%;
+}
+
+.sky .city-back .building-9 .block-1 {
+  margin-top: -20%;
+  width: 90%;
+  height: 20%;
+  background-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.sky .city-back .building-9 .block-1 .windows {
+  width: 47%;
+  height: 40%;
+  background-color: #7aa6c2;
+}
+
+.sky .city-back .building-9 .block-2 {
+  width: 90%;
+  height: 20%;
+  background-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.sky .city-back .building-9 .block-2 .windows {
+  height: 100%;
+  width: 20%;
+  background-color: #7aa6c2;
+}
+
+.sky .city-back .building-9 .block-3 {
+  width: 90%;
+  height: 40%;
+  background-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.sky .city-back .building-9 .block-3 .windows {
+  height: 20%;
+  width: 30%;
+  background-color: #7aa6c2;
 }
 
 .sky .city-back .building-10 {
-  background-color: #9dc0d3;
+  background-color: #a8d1e7;
   width: 8%;
   height: 45%;
   margin-left: 0.1%;
   z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sky .city-back .building-10 .windows {
+  height: 5%;
+  width: 90%;
+  background-color: #8eb9d1;
+  border-radius: 20%;
 }
 
 .sky .city-back .building-11 {
@@ -226,19 +531,64 @@ body {
   z-index: 1;
 }
 
+.sky .city-back .building-11 .up-part {
+  width: 100%;
+  height: 20%;
+  background-color: #9dc0d3;
+  border-radius: 50% 50% 50% 50% / 100% 100% 0% 0%;
+  margin-top: -30%;
+}
+
 .sky .city-back .building-12 {
   background-color: #c3dff0;
   width: 8%;
   height: 27%;
   margin-left: -2%;
   z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.sky .city-back .building-12 .windows {
+  height: 12%;
+  width: 22%;
+  background-color: #96b4c7;
+  border-radius: 10%;
 }
 
 .sky .city-back .building-13 {
-  background-color: #b5d7e9;
-  width: 8%;
+  background-color: #9dc0d3;
+  width: 7%;
   height: 55%;
   margin-left: -3%;
+}
+
+.sky .city-back .building-13 .first-part {
+  margin: 0 auto;
+  height: 20%;
+  width: 80%;
+  background-color: #9dc0d3;
+  margin-top: -15%;
+}
+
+.sky .city-back .building-13 .second-part {
+  margin: 0 auto;
+  height: 20%;
+  width: 40%;
+  background-color: #9dc0d3;
+  margin-top: -100%;
 }
 
 .sky .city-back .building-14 {
@@ -246,6 +596,27 @@ body {
   width: 8%;
   height: 40%;
   margin-left: -3%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sky .city-back .building-14 .windows {
+  height: 15%;
+  width: 40%;
+  background-color: #5d97b6;
+  border-radius: 50% 50% 100% 0% / 100% 100% 0% 0%;
 }
 
 .sky .city-back .building-15 {
@@ -254,13 +625,39 @@ body {
   height: 25%;
   margin-left: -3%;
   z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sky .city-back .building-15 .windows {
+  height: 10%;
+  width: 90%;
+  background-color: #c9d5db;
 }
 
 .sky .city-back .building-16 {
-  background-color: #c4e0f0;
-  width: 8%;
+  background-color: #9dc0d3;
+  width: 7%;
   height: 60%;
   margin-left: -3%;
+}
+
+.sky .city-back .building-16 .first-part {
+  margin: 0 auto;
+  height: 20%;
+  width: 80%;
+  background-color: #9dc0d3;
+  margin-top: -15%;
 }
 
 .sky .city-back .building-17 {
@@ -269,6 +666,87 @@ body {
   height: 40%;
   margin-left: -3%;
   z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.sky .city-back .building-17 .block-1 {
+  width: 90%;
+  height: 40%;
+  background-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.sky .city-back .building-17 .block-1 .windows {
+  height: 20%;
+  width: 30%;
+  background-color: #7aa6c2;
+}
+
+.sky .city-back .building-17 .block-2 {
+  width: 90%;
+  height: 20%;
+  background-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.sky .city-back .building-17 .block-2 .windows {
+  width: 47%;
+  height: 40%;
+  background-color: #7aa6c2;
+}
+
+.sky .city-back .building-17 .block-3 {
+  width: 90%;
+  height: 20%;
+  background-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.sky .city-back .building-17 .block-3 .windows {
+  height: 100%;
+  width: 20%;
+  background-color: #7aa6c2;
 }
 
 .sky .city-back .building-18 {
@@ -276,6 +754,26 @@ body {
   width: 8%;
   height: 43%;
   margin-left: -3%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.sky .city-back .building-18 .windows {
+  height: 15%;
+  width: 40%;
+  background-color: #c0ced6;
 }
 
 .sky .sun-block {
@@ -295,8 +793,8 @@ body {
           animation: color-change-sun 5s infinite;
 }
 
-.trottoir {
-  background-color: #b8c1c7;
+.grass {
+  background-color: #53be21;
   width: 100vw;
   height: 5vh;
   display: -webkit-box;
@@ -307,7 +805,7 @@ body {
           justify-content: space-between;
 }
 
-.trottoir .trees-block {
+.grass .trees-block {
   z-index: 1000;
   width: 4vw;
   height: 12vh;
@@ -323,7 +821,7 @@ body {
           flex-direction: column;
 }
 
-.trottoir .trees-block .tree-top {
+.grass .trees-block .tree-top {
   background-color: #9eb92a;
   width: 100%;
   height: 150%;
@@ -341,14 +839,14 @@ body {
           justify-content: flex-end;
 }
 
-.trottoir .trees-block .tree-top .trunck {
+.grass .trees-block .tree-top .trunck {
   background-color: #554c07;
   width: 7%;
   height: 30%;
   margin: 0 auto;
 }
 
-.trottoir .trees-block .tree-down {
+.grass .trees-block .tree-down {
   background-color: #554c07;
   width: 7%;
   height: 50%;
@@ -356,15 +854,22 @@ body {
   z-index: 2;
 }
 
-.trottoir .trees-block:nth-child(1) {
+.grass .trees-block .tree-down .trunck-down {
+  background-color: #554c07;
+  width: 100%;
+  height: 100%;
+  margin-top: 200%;
+}
+
+.grass .trees-block:nth-child(1) {
   margin-left: 2vw;
 }
 
-.trottoir .trees-block:nth-child(4) {
+.grass .trees-block:nth-child(4) {
   margin-right: 2vw;
 }
 
-.trottoir .light-block {
+.grass .light-block {
   background-color: transparent;
   margin-left: 25%;
   height: 25vh;
@@ -381,10 +886,10 @@ body {
   z-index: 1000;
 }
 
-.trottoir .light-block .light-part-one {
+.grass .light-block .light-part-one {
   width: 60%;
   height: 45%;
-  background-color: #4e4e4e;
+  background-color: #25354e;
   margin: 0 auto;
   border-radius: 30%;
   display: -webkit-box;
@@ -399,7 +904,7 @@ body {
           justify-content: space-evenly;
 }
 
-.trottoir .light-block .light-part-one .red-light {
+.grass .light-block .light-part-one .red-light {
   height: 35%;
   width: 50%;
   border-radius: 50%;
@@ -409,7 +914,7 @@ body {
           animation: color-change-first 8s infinite;
 }
 
-.trottoir .light-block .light-part-one .green-light {
+.grass .light-block .light-part-one .green-light {
   height: 35%;
   width: 50%;
   border-radius: 50%;
@@ -419,17 +924,17 @@ body {
           animation: color-change-second 8s infinite;
 }
 
-.trottoir .light-block .light-part-two {
+.grass .light-block .light-part-two {
   width: 10%;
   height: 50%;
-  background-color: #4e4e4e;
+  background-color: #25354e;
   margin: 0 auto;
 }
 
-.trottoir .light-block .light-part-three {
+.grass .light-block .light-part-three {
   width: 40%;
   height: 5%;
-  background-color: #4e4e4e;
+  background-color: #25354e;
   margin: 0 auto;
   border-radius: 10%;
 }
