--- a/picture only css/styles/index.scss
+++ b/picture only css/styles/index.scss
@@ -59,6 +59,28 @@
 
 }
 
+@keyframes color-change-windows {
+    0% {
+        background-color: rgb(122, 166, 194);
+    }
+    48%{
+        background-color: rgb(122, 166, 194);
+    }
+    50% {
+        background-color: rgb(235, 200, 3);
+    }
+
+    98% {
+        background-color: rgb(235, 200, 3);
+    }
+
+    100% {
+        background-color: rgb(122, 166, 194);
+    }
+
+}
+
+
 
 
 html {
@@ -74,12 +96,12 @@ body {
     font-family: 'Roboto', sans-serif;
     width: 100vw;
     height: 100vh;
-     background-color: rgb(198, 227, 252);
+    background-color: rgb(158, 210, 255);
 
 }
 
 .sky {
-     
+
     background-color: transparent;
     width: 100vw;
     height: 52vh;
@@ -93,122 +115,112 @@ body {
 
     //!!!!!!!!!!!!!!!!!!!!
     //!!!!!!!!!!
-    
-
-        .cloud {
-            position: fixed;
-            top: 20%;
-            left: 75%;
-            
-            background: rgb(255, 255, 255);
-            border-radius: 100px;
-            height: 5%;
-            width: 10%;
-        }
-        
-        .cloud:after, .cloud:before {
-            background: #fff;
-            content: '';
-            position: absolute;
-            z-indeX: -1;
-        }
-        
-        .cloud:after {  
-            border-radius: 100%;
-            height: 100%;
-            left: 15%;
-            top: -50%;
-            width: 40%;
-        }
-        
-        .cloud:before {
-            border-radius: 150%;
-            width: 40%;
-            height: 200%;
-            left: 45%;
-            top: -100%;
-        }
-
-        .cloud-2{
-            position: fixed;
-            top: 10%;
-            left: 45%;
-            
-            background: rgb(255, 255, 255);
-            border-radius: 100px;
-            height: 5%;
-            width: 10%;
-        }
-        .cloud-2:after, .cloud-2:before {
-            background: #fff;
-            content: '';
-            position: absolute;
-            z-indeX: -1;
-        }
-        
-        .cloud-2:after {  
-            border-radius: 100%;
-            height: 100%;
-            left: 15%;
-            top: -50%;
-            width: 40%;
-        }
-        
-        .cloud-2:before {
-            border-radius: 150%;
-            width: 40%;
-            height: 200%;
-            left: 45%;
-            top: -100%;
-        }
-
-        .cloud-3{
-            position: fixed;
-            top: 12%;
-            left: 25%;
-            
-            background: rgb(255, 255, 255);
-            border-radius: 100px;
-            height: 5%;
-            width: 10%;
-        }
-        .cloud-3:after, .cloud-3:before {
-            background: #fff;
-            content: '';
-            position: absolute;
-            z-indeX: -1;
-        }
-        
-        .cloud-3:after {  
-            border-radius: 100%;
-            height: 100%;
-            left: 15%;
-            top: -50%;
-            width: 40%;
-        }
-        
-        .cloud-3:before {
-            border-radius: 150%;
-            width: 40%;
-            height: 200%;
-            left: 45%;
-            top: -100%;
-        }
-    
 
 
+    .cloud {
+        position: fixed;
+        top: 20%;
+        left: 75%;
 
+        background: rgb(255, 255, 255);
+        border-radius: 100px;
+        height: 5%;
+        width: 10%;
+    }
 
+    .cloud:after,
+    .cloud:before {
+        background: #fff;
+        content: '';
+        position: absolute;
+        z-indeX: -1;
+    }
 
+    .cloud:after {
+        border-radius: 100%;
+        height: 100%;
+        left: 15%;
+        top: -50%;
+        width: 40%;
+    }
 
+    .cloud:before {
+        border-radius: 150%;
+        width: 40%;
+        height: 200%;
+        left: 45%;
+        top: -100%;
+    }
 
+    .cloud-2 {
+        position: fixed;
+        top: 10%;
+        left: 45%;
 
+        background: rgb(255, 255, 255);
+        border-radius: 100px;
+        height: 5%;
+        width: 10%;
+    }
 
+    .cloud-2:after,
+    .cloud-2:before {
+        background: #fff;
+        content: '';
+        position: absolute;
+        z-indeX: -1;
+    }
 
+    .cloud-2:after {
+        border-radius: 100%;
+        height: 100%;
+        left: 15%;
+        top: -50%;
+        width: 40%;
+    }
 
+    .cloud-2:before {
+        border-radius: 150%;
+        width: 40%;
+        height: 200%;
+        left: 45%;
+        top: -100%;
+    }
 
+    .cloud-3 {
+        position: fixed;
+        top: 12%;
+        left: 25%;
 
+        background: rgb(255, 255, 255);
+        border-radius: 100px;
+        height: 5%;
+        width: 10%;
+    }
 
+    .cloud-3:after,
+    .cloud-3:before {
+        background: #fff;
+        content: '';
+        position: absolute;
+        z-indeX: -1;
+    }
+
+    .cloud-3:after {
+        border-radius: 100%;
+        height: 100%;
+        left: 15%;
+        top: -50%;
+        width: 40%;
+    }
+
+    .cloud-3:before {
+        border-radius: 150%;
+        width: 40%;
+        height: 200%;
+        left: 45%;
+        top: -100%;
+    }
 
 
     .city-back {
@@ -221,41 +233,38 @@ body {
 
         align-items: flex-end;
 
-        // .building{
-
-        //     //border: 1px solid black;
-        // }
-
+    
         .building-1 {
             background-color: rgb(177, 204, 221);
             width: 8%;
             height: 35%;
 
-            .first-part{
+            .first-part {
                 background-color: rgb(177, 204, 221);
                 width: 80%;
                 height: 10%;
                 margin-top: -10%;
                 margin-left: 10%;
-                
+
             }
-            .second-part{
+
+            .second-part {
                 background-color: rgb(177, 204, 221);
                 width: 70%;
                 height: 30%;
                 margin-top: -40%;
                 margin-left: 15%;
-                border-radius:50% 50% 50% 50% / 100% 100% 0% 0%;
+                border-radius: 50% 50% 50% 50% / 100% 100% 0% 0%;
 
             }
 
-            .windows{
+            .windows {
                 width: 50%;
                 height: 10%;
                 background-color: rgb(212, 222, 228);
                 margin: 5% auto;
             }
-           
+
 
 
         }
@@ -269,7 +278,8 @@ body {
             display: flex;
             flex-direction: column;
             justify-content: space-around;
-            .windows{
+
+            .windows {
                 width: 80%;
                 height: 10%;
                 background-color: rgb(181, 211, 236);
@@ -289,7 +299,7 @@ body {
             align-items: center;
 
 
-            .windows{
+            .windows {
                 height: 5%;
                 width: 80%;
                 margin: 0 auto;
@@ -316,20 +326,25 @@ body {
             justify-content: space-around;
             align-items: center;
 
-            .block-1{
+            .block-1 {
                 width: 90%;
                 height: 20%;
                 background-color: transparent;
                 display: flex;
                 flex-direction: row;
                 justify-content: space-around;
-                .windows{
+
+                .windows {
                     height: 100%;
                     width: 20%;
                     background-color: rgb(122, 166, 194);
                 }
+                .windows:nth-child(1){
+                    animation: color-change-windows 10s infinite;
+                }
             }
-            .block-2{
+
+            .block-2 {
                 width: 90%;
                 height: 20%;
                 background-color: transparent;
@@ -337,13 +352,15 @@ body {
                 justify-content: space-between;
                 flex-direction: row;
                 flex-wrap: wrap;
-                .windows{
+
+                .windows {
                     width: 47%;
                     height: 40%;
                     background-color: rgb(122, 166, 194);
                 }
             }
-            .block-3{
+
+            .block-3 {
                 width: 90%;
                 height: 40%;
                 background-color: transparent;
@@ -351,16 +368,13 @@ body {
                 flex-direction: row;
                 flex-wrap: wrap;
                 justify-content: space-between;
-                .windows{
+
+                .windows {
                     height: 20%;
                     width: 30%;
                     background-color: rgb(122, 166, 194);
                 }
             }
-
-
-
-
 
 
         }
@@ -377,12 +391,12 @@ body {
             justify-content: space-evenly;
             align-items: flex-end;
 
-            .windows{
+            .windows {
                 background-color: rgb(176, 215, 241);
                 width: 40%;
                 height: 15%;
-                border-radius: 50% 50% 100% 0% / 100% 100% 0% 0% ;
-               
+                border-radius: 50% 50% 100% 0% / 100% 100% 0% 0%;
+
 
             }
 
@@ -397,19 +411,21 @@ body {
             display: flex;
             flex-direction: column;
             justify-content: space-around;
-            .windows{
+
+            .windows {
                 height: 10%;
                 width: 90%;
                 background-color: rgb(158, 188, 211);
                 margin: 0 auto;
 
             }
-            .verticale-line{
+
+            .verticale-line {
                 background-color: black;
                 position: absolute;
                 height: 100%;
                 width: 15%;
-                
+
             }
         }
 
@@ -419,7 +435,7 @@ body {
             height: 70%;
             margin-left: -15%;
             z-index: 1;
-            border-radius:100% 0% 55% 45% / 100% 100% 0% 0%;
+            border-radius: 100% 0% 55% 45% / 100% 100% 0% 0%;
         }
 
         .building-9 {
@@ -431,24 +447,26 @@ body {
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            .first-part{
+
+            .first-part {
                 background-color: rgb(177, 204, 221);
                 width: 80%;
                 height: 10%;
                 margin-top: -10%;
-                
-                
+
+
             }
-            .second-part{
+
+            .second-part {
                 background-color: rgb(177, 204, 221);
                 width: 70%;
                 height: 30%;
                 margin-top: -50%;
-                
-                border-radius:50% 
 
+                border-radius: 50%
             }
-            .block-1{
+
+            .block-1 {
                 margin-top: -20%;
                 width: 90%;
                 height: 20%;
@@ -457,28 +475,32 @@ body {
                 justify-content: space-between;
                 flex-direction: row;
                 flex-wrap: wrap;
-                .windows{
+
+                .windows {
                     width: 47%;
                     height: 40%;
                     background-color: rgb(122, 166, 194);
                 }
             }
-            .block-2{
-               
-                
+
+            .block-2 {
+
+
                 width: 90%;
                 height: 20%;
                 background-color: transparent;
                 display: flex;
                 flex-direction: row;
                 justify-content: space-around;
-                .windows{
+
+                .windows {
                     height: 100%;
                     width: 20%;
                     background-color: rgb(122, 166, 194);
                 }
             }
-            .block-3{
+
+            .block-3 {
                 width: 90%;
                 height: 40%;
                 background-color: transparent;
@@ -486,13 +508,14 @@ body {
                 flex-direction: row;
                 flex-wrap: wrap;
                 justify-content: space-between;
-                .windows{
+
+                .windows {
                     height: 20%;
                     width: 30%;
                     background-color: rgb(122, 166, 194);
                 }
             }
-            
+
         }
 
         .building-10 {
@@ -505,10 +528,11 @@ body {
             flex-direction: column;
             justify-content: space-around;
             align-items: center;
-            .windows{
+
+            .windows {
                 height: 5%;
                 width: 90%;
-                background-color:rgb(142, 185, 209) ;
+                background-color: rgb(142, 185, 209);
                 border-radius: 20%;
             }
         }
@@ -520,12 +544,12 @@ body {
             margin-left: -5%;
             z-index: 1;
             // border-radius:50% 50% 50% 50% / 100% 100% 0% 0%;
-            
-            .up-part{
+
+            .up-part {
                 width: 100%;
                 height: 20%;
                 background-color: rgb(157, 192, 211);
-                border-radius:50% 50% 50% 50% / 100% 100% 0% 0%;
+                border-radius: 50% 50% 50% 50% / 100% 100% 0% 0%;
                 margin-top: -30%;
             }
 
@@ -544,31 +568,34 @@ body {
             justify-content: space-around;
             flex-wrap: wrap;
             align-items: flex-end;
-            .windows{
+
+            .windows {
                 height: 12%;
                 width: 22%;
-                background-color:rgb(150, 180, 199) ;
+                background-color: rgb(150, 180, 199);
                 border-radius: 10%;
             }
         }
 
         .building-13 {
-            background-color: rgb(157,192,211);
+            background-color: rgb(157, 192, 211);
             width: 7%;
             height: 55%;
             margin-left: -3%;
-            .first-part{
+
+            .first-part {
                 margin: 0 auto;
                 height: 20%;
                 width: 80%;
-                background-color: rgb(157,192,211);
+                background-color: rgb(157, 192, 211);
                 margin-top: -15%;
             }
-            .second-part{
+
+            .second-part {
                 margin: 0 auto;
                 height: 20%;
                 width: 40%;
-                background-color: rgb(157,192,211);
+                background-color: rgb(157, 192, 211);
                 margin-top: -100%;
             }
 
@@ -584,11 +611,12 @@ body {
             flex-wrap: wrap;
             justify-content: space-around;
             align-items: center;
-            .windows{
+
+            .windows {
                 height: 15%;
                 width: 40%;
                 background-color: rgb(93, 151, 182);
-                border-radius: 50% 50% 100% 0% / 100% 100% 0% 0% ;
+                border-radius: 50% 50% 100% 0% / 100% 100% 0% 0%;
             }
 
         }
@@ -603,28 +631,30 @@ body {
             flex-direction: column;
             justify-content: space-around;
             align-items: center;
-            .windows{
+
+            .windows {
                 height: 10%;
                 width: 90%;
-                background-color:rgb(201, 213, 219) ;
+                background-color: rgb(201, 213, 219);
             }
 
         }
 
         .building-16 {
-            background-color: rgb(157,192,211);
+            background-color: rgb(157, 192, 211);
             width: 7%;
             height: 60%;
             margin-left: -3%;
-            .first-part{
-               margin: 0 auto;
+
+            .first-part {
+                margin: 0 auto;
                 height: 20%;
                 width: 80%;
-                background-color: rgb(157,192,211);
+                background-color: rgb(157, 192, 211);
                 margin-top: -15%;
-               
+
             }
-           
+
 
         }
 
@@ -638,7 +668,8 @@ body {
             flex-direction: column;
             align-items: center;
             justify-content: space-around;
-            .block-1{
+
+            .block-1 {
                 width: 90%;
                 height: 40%;
                 background-color: transparent;
@@ -646,13 +677,15 @@ body {
                 flex-direction: row;
                 flex-wrap: wrap;
                 justify-content: space-between;
-                .windows{
+
+                .windows {
                     height: 20%;
                     width: 30%;
                     background-color: rgb(122, 166, 194);
                 }
             }
-            .block-2{
+
+            .block-2 {
                 width: 90%;
                 height: 20%;
                 background-color: transparent;
@@ -660,21 +693,24 @@ body {
                 justify-content: space-between;
                 flex-direction: row;
                 flex-wrap: wrap;
-                .windows{
+
+                .windows {
                     width: 47%;
                     height: 40%;
                     background-color: rgb(122, 166, 194);
                 }
             }
-            .block-3{
-              
+
+            .block-3 {
+
                 width: 90%;
                 height: 20%;
                 background-color: transparent;
                 display: flex;
                 flex-direction: row;
                 justify-content: space-around;
-                .windows{
+
+                .windows {
                     height: 100%;
                     width: 20%;
                     background-color: rgb(122, 166, 194);
@@ -694,7 +730,7 @@ body {
             justify-content: space-around;
             flex-wrap: wrap;
 
-            .windows{
+            .windows {
                 height: 15%;
                 width: 40%;
                 background-color: rgb(192, 206, 214);
@@ -730,15 +766,6 @@ body {
     height: 5vh;
     display: flex;
     justify-content: space-between;
-
-   
-
-
-
-
-
-
-
 
 
     .trees-block {
@@ -776,7 +803,8 @@ body {
             height: 50%;
             margin: 0 auto;
             z-index: 2;
-            .trunck-down{
+
+            .trunck-down {
                 background-color: rgb(85, 76, 7);
                 width: 100%;
                 height: 100%;
@@ -868,10 +896,6 @@ body {
         }
 
 
-
-
-
-
     }
 
 }
@@ -914,17 +938,6 @@ body {
             height: 100%;
         }
     }
-
-
-
-
-
-
-
-
-
-
-
 
 
     .crosswalk {
@@ -980,17 +993,3 @@ body {
 }
 
 
-
-
-
-
-
-// .road{
-//     background-color: rgb(204,204,204);
-//     width: 100vw;
-//     height: 25vh;
-//     position: fixed;
-//     bottom: 0;
-
-
-// }
